fix bugs after testing

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -406,7 +406,8 @@
         "TITLE": "Аффинитетные группы",
         "NO_AFFINITY_GROUP": "Нет аффинитетной группы",
         "NO_AFFINITY_GROUPS": "Нет аффинитетных групп",
-        "SELECT_AFFINITY_GROUP": "Изменение группы",
+        "TO_SELECT_AFFINITY_GROUP": "Выберите аффинитетную группу",
+        "SELECT_AFFINITY_GROUP": "Выбор аффинитетной группы",
         "CREATE_NEW_GROUP": "Создать новую",
         "CHOOSE_EXISTING_GROUP": "Выбрать существующую",
         "CHOOSE_GROUP": "Выберите группу",
@@ -550,7 +551,6 @@
       "IPS": "IP",
       "VOLUMES": "Дисков",
       "PRIMARY_STORAGE": "Основного хранилища",
-      "CREATING_AG": "Создание аффинитетной группы...",
       "CREATING_SG": "Создание группы безопасности...",
       "DEPLOYING_VM": "Создание виртуальной машины...",
       "CREATING_INSTANCE_GROUP": "Создание группы...",
