--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -406,6 +406,7 @@
         "TITLE": "Affinity Groups",
         "NO_AFFINITY_GROUP": "No affinity group",
         "NO_AFFINITY_GROUPS": "No affinity groups",
+        "TO_SELECT_AFFINITY_GROUP": "Select affinity group",
         "SELECT_AFFINITY_GROUP": "Select affinity group",
         "CREATE_NEW_GROUP": "Create a new group",
         "CHOOSE_EXISTING_GROUP": "Choose an existing group",
@@ -550,7 +551,6 @@
       "IPS": "IPs",
       "VOLUMES": "Volumes",
       "PRIMARY_STORAGE": "Primary storage",
-      "CREATING_AG": "Creating an affinity group...",
       "CREATING_SG": "Creating a security group...",
       "DEPLOYING_VM": "Deploying the virtual machine...",
       "CREATING_INSTANCE_GROUP": "Creating an instance group...",
