--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-Firewall.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-Firewall.po
@@ -7,15 +7,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-10 15:47+0700\n"
-"PO-Revision-Date: 2018-10-10 17:17+0700\n"
+"POT-Creation-Date: 2018-10-24 17:18+0700\n"
+"PO-Revision-Date: 2018-10-26 09:04+0700\n"
+"Last-Translator: \n"
+"Language: ru\n"
+"Language-Team: \n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 "
+"&& (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.4.0\n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Language: ru\n"
 "X-Generator: Poedit 1.8.7.1\n"
 
 #: ../../CSUI-Firewall.rst:4
@@ -24,13 +26,14 @@ msgstr "Брандмауэр"
 
 #: ../../CSUI-Firewall.rst:7
 msgid ""
-"The *Firewall* section contains templates to create a security group for a "
-"virtual machine and shared security groups used for virtual machines of other "
-"users."
+"The *Virtual Machines* -> *Firewall* section contains templates to create a "
+"security group for a virtual machine and shared security groups used for "
+"virtual machines of other users."
 msgstr ""
-"Раздел *Брандмауэр* содержит шаблоны для создания группы безопасности "
-"виртуальной машины, а также разделяемые группы безопасности, используемые "
-"виртуальными машинами разных пользователей, и приватные группы безопасности. "
+"Раздел *Виртуальные машины* -> *Брандмауэр* содержит шаблоны для создания "
+"группы безопасности виртуальной машины, а также разделяемые группы "
+"безопасности, используемые виртуальными машинами разных пользователей, и "
+"приватные группы безопасности. "
 
 #: ../../CSUI-Firewall.rst:11
 msgid ""
@@ -297,10 +300,10 @@ msgstr ""
 "помощью \"стрелки\":"
 
 #: ../../CSUI-Firewall.rst:99
+#, fuzzy
 msgid ""
 "In the list below you will see the rules corresponding to the selected "
-"templates. All of them are checked as selected. Uncheck those you do not wish "
-"to add to your shared security group."
+"templates. Check those you wish to add to your shared security group."
 msgstr ""
 "В списке ниже появятся правила, соответствующие выбранным шаблонам. Отметьте те "
 "правила, которые Вы хотите добавить в группу безопасности."
