--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-Logout.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-Logout.po
@@ -7,15 +7,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-10 15:17+0700\n"
-"PO-Revision-Date: 2018-10-10 15:23+0700\n"
+"POT-Creation-Date: 2018-10-24 17:18+0700\n"
+"PO-Revision-Date: 2018-10-26 09:05+0700\n"
+"Last-Translator: \n"
+"Language: ru\n"
+"Language-Team: \n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 "
+"&& (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.4.0\n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Language: ru\n"
 "X-Generator: Poedit 1.8.7.1\n"
 
 #: ../../CSUI-Logout.rst:4
@@ -24,11 +26,9 @@ msgstr "Выход из системы"
 
 #: ../../CSUI-Logout.rst:6
 msgid ""
-"Clicking *Logout* in the bottom of the navigation menu bar a user can "
-"logout from CloudStack."
-msgstr ""
-"Выйти из CloudStack можно, нажав *Выход* на главной навигационной "
-"панели."
+"Clicking *Logout* in the bottom of the navigation bar a user can logout from "
+"CloudStack."
+msgstr "Выйти из CloudStack можно, нажав *Выход* на главной навигационной панели."
 
 #: ../../CSUI-Logout.rst:11
 msgid "It will move a user back to the Login form."
