--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-SSHkeys.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-SSHkeys.po
@@ -7,15 +7,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-10 15:17+0700\n"
-"PO-Revision-Date: 2018-10-11 14:25+0700\n"
+"POT-Creation-Date: 2018-10-24 17:18+0700\n"
+"PO-Revision-Date: 2018-10-26 09:10+0700\n"
+"Last-Translator: \n"
+"Language: ru\n"
+"Language-Team: \n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.4.0\n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Language: ru\n"
 "X-Generator: Poedit 1.8.7.1\n"
 
 #: ../../CSUI-SSHkeys.rst:4
@@ -23,23 +25,26 @@ msgid "SSH Keys"
 msgstr "Ключи SSH "
 
 #: ../../CSUI-SSHkeys.rst:7
-msgid "In the *SSH keys* section you can create and manage SSH keys."
-msgstr "В разделе *Ключи SSH* можно создавать и управлять ключами SSH. "
+msgid ""
+"In the *Virtual Machines* -> *SSH keys* section you can create and manage SSH "
+"keys."
+msgstr ""
+"В разделе *Virtual Machines* -> *Ключи SSH* можно создавать и управлять "
+"ключами SSH. "
 
 #: ../../CSUI-SSHkeys.rst:9
 msgid ""
-"In addition to the username and password authentication, CloudStack "
-"supports using SSH keys to log in to the cloud infrastructure for "
-"additional security. Find more information in the `official documentation "
-"<http://docs.cloudstack.apache.org/projects/cloudstack-administration/en/"
-"latest/virtual_machines.html?highlight=keys#using-ssh-keys-for-"
-"authentication>`_."
+"In addition to the username and password authentication, CloudStack supports "
+"using SSH keys to log in to the cloud infrastructure for additional security. "
+"Find more information in the `official documentation <http://docs.cloudstack."
+"apache.org/projects/cloudstack-administration/en/latest/virtual_machines.html?"
+"highlight=keys#using-ssh-keys-for-authentication>`_."
 msgstr ""
 "CloudStack поддерживает использование ключей SSH в качестве дополнительной "
 "защиты при доступе к облачной инфраструктуре, помимо имени пользователя и "
 "пароля. См. подробнее в `официальной документации <http://docs.cloudstack."
-"apache.org/projects/cloudstack-administration/en/latest/virtual_machines."
-"html?highlight=keys#using-ssh-keys-for-authentication>`_."
+"apache.org/projects/cloudstack-administration/en/latest/virtual_machines.html?"
+"highlight=keys#using-ssh-keys-for-authentication>`_."
 
 #: ../../CSUI-SSHkeys.rst:11
 msgid ""
@@ -64,17 +69,15 @@ msgstr ""
 #: ../../CSUI-SSHkeys.rst:20
 msgid "Administrators can see and manage keys for all accounts in the domain."
 msgstr ""
-"Администраторы могут видеть и управлять ключами всех пользователей в "
-"домене. "
+"Администраторы могут видеть и управлять ключами всех пользователей в домене. "
 
 #: ../../CSUI-SSHkeys.rst:22
 msgid ""
-"You can switch the view from a list mode to a card mode using the switch "
-"tool |view icon|/|box icon| in the upper-right corner."
+"You can switch the view from a list mode to a card mode using the switch tool "
+"|view icon|/|box icon| in the upper-right corner."
 msgstr ""
-"Существующие ключи могут быть представлены в виде списка или в виде "
-"карточек. Используйте переключатель |view icon|/|box icon| в правом верхнем "
-"углу."
+"Существующие ключи могут быть представлены в виде списка или в виде карточек. "
+"Используйте переключатель |view icon|/|box icon| в правом верхнем углу."
 
 #: ../../CSUI-SSHkeys.rst:24
 msgid "For every key the following information is displayed:"
@@ -106,8 +109,8 @@ msgstr ""
 
 #: ../../CSUI-SSHkeys.rst:35
 msgid ""
-"Besides, the keys can be grouped by accounts that may be convenient for "
-"list viewing."
+"Besides, the keys can be grouped by accounts that may be convenient for list "
+"viewing."
 msgstr "Панель фильтрации расположена над списком ключей."
 
 #: ../../CSUI-SSHkeys.rst:40
@@ -120,25 +123,25 @@ msgstr "Вы можете создать новый ключ SSH для ауте
 
 #: ../../CSUI-SSHkeys.rst:43
 msgid ""
-"By clicking “Create” |create icon| in the bottom-right corner you will open "
-"a form where you should specify a key name:"
+"By clicking “Create” |create icon| in the bottom-right corner you will open a "
+"form where you should specify a key name:"
 msgstr ""
-"Нажмите \"Создать\" |create icon| в правом нижнем углу и в открывшейся "
-"форме введите название ключа: "
+"Нажмите \"Создать\" |create icon| в правом нижнем углу и в открывшейся форме "
+"введите название ключа: "
 
 #: ../../CSUI-SSHkeys.rst:47
 msgid ""
-"Then click “CREATE”. The SSH key will be auto-generated. The public key "
-"will appear in the list of SSH keys with a fingerprint. In the modal "
-"window, you will see the private key. This private key is not saved in the "
-"system. You should save it for yourself. Click \"COPY\" to correctly copy "
-"it and save it locally."
+"Then click “CREATE”. The SSH key will be auto-generated. The public key will "
+"appear in the list of SSH keys with a fingerprint. In the modal window, you "
+"will see the private key. This private key is not saved in the system. You "
+"should save it for yourself. Click \"COPY\" to correctly copy it and save it "
+"locally."
 msgstr ""
-"Затем нажмите \"СОЗДАТЬ\". Ключ SSH будет создан автоматически. Открытый "
-"ключ появится в списке ключей SSH, для него будет отображаться fingerprint. "
-"В модальном окне появится закрытый ключ, который нужно будет скопировать и "
-"сохранить локально. В системе он не сохранится. Нажмите \"КОПИРОВАТЬ\", "
-"чтобы правильно скопировать его в буфер обмена и сохранить себе."
+"Затем нажмите \"СОЗДАТЬ\". Ключ SSH будет создан автоматически. Открытый ключ "
+"появится в списке ключей SSH, для него будет отображаться fingerprint. В "
+"модальном окне появится закрытый ключ, который нужно будет скопировать и "
+"сохранить локально. В системе он не сохранится. Нажмите \"КОПИРОВАТЬ\", чтобы "
+"правильно скопировать его в буфер обмена и сохранить себе."
 
 #: ../../CSUI-SSHkeys.rst:51
 msgid "Then click “OK” to close the window."
@@ -146,16 +149,16 @@ msgstr "Нажмите “OK”, чтобы закрыть окно. "
 
 #: ../../CSUI-SSHkeys.rst:53
 msgid ""
-"You can specify an SSH public key entering its value in the field. It "
-"should start from ``ssh-rsa`` followed by one space and at least one "
-"symbol. Then click “CREATE”. The key will be saved. No private key is "
-"required in this case."
+"You can specify an SSH public key entering its value in the field. It should "
+"start from ``ssh-rsa`` followed by one space and at least one symbol. Then "
+"click “CREATE”. The key will be saved. No private key is required in this "
+"case."
 msgstr ""
 "Можно задать значение для ключа. Для этого введите значение ключа во втором "
 "поле, после того, как ввели название. Значение ключа должно начинаться с "
-"``ssh-rsa`` с последующим пробелом и минимум одним символом после него. "
-"Затем нажмите “СОЗДАТЬ”. Ключ будет сохранен. Закрытый ключ в данном случае "
-"не будет создан."
+"``ssh-rsa`` с последующим пробелом и минимум одним символом после него. Затем "
+"нажмите “СОЗДАТЬ”. Ключ будет сохранен. Закрытый ключ в данном случае не "
+"будет создан."
 
 #: ../../CSUI-SSHkeys.rst:57
 msgid "The created SSH key is available to assign to VMs now."
@@ -171,8 +174,7 @@ msgstr "Информационная панель ключа SSH"
 msgid ""
 "By clicking an SSH key in the list you will open a details sidebar to the "
 "right."
-msgstr ""
-"Кликом на ключ SSH в списке можно открыть информационную панель справа."
+msgstr "Кликом на ключ SSH в списке можно открыть информационную панель справа."
 
 #: ../../CSUI-SSHkeys.rst:66
 msgid "It contains the following information:"
@@ -192,9 +194,9 @@ msgstr "Fingerprint открытого ключа SSH;"
 
 #: ../../CSUI-SSHkeys.rst:71
 msgid ""
-"SSH key description - In this block a description can be added to "
-"understand better what this key is for. Click the block and enter a short "
-"description in the text field. Then click \"SAVE\" to save it."
+"SSH key description - In this block a description can be added to understand "
+"better what this key is for. Click the block and enter a short description in "
+"the text field. Then click \"SAVE\" to save it."
 msgstr ""
 "Описание ключа SSH - В данном блоке можно добавить описание для ключа, для "
 "лучшего понимания его назначения. Кликните на блок и введите описание в "
@@ -205,41 +207,31 @@ msgid "Click \"CANCEL\" to drop adding a description."
 msgstr "Для отмены добавления описания нажмите \"ОТМЕНИТЬ\"."
 
 #: ../../CSUI-SSHkeys.rst:77
+#, fuzzy
 msgid ""
 "You can edit the description of an SSH key by clicking |edit icon|. Change "
-"the existing description in the text field and save the edits."
+"the existing description in the text field and save the edits. The "
+"description is saved to account tags."
 msgstr ""
-"Описание ключа можно редактировать, кликнув на |edit icon|. Измените "
-"описание ключа в текстовом поле и сохраните изменения."
+"Описание ключа можно редактировать, кликнув на |edit icon|. Измените описание "
+"ключа в текстовом поле и сохраните изменения."
 
-#: ../../CSUI-SSHkeys.rst:79
-msgid ""
-"The description is saved to account tags if they are supported for the "
-"account. Account tags can be switched on in the `configuration file "
-"<https://github.com/bwsw/cloudstack-ui/blob/master/config-guide.md>`_ by an "
-"Administrator."
-msgstr ""
-"Описание ключа сохраняется в теги аккаунта, если они активированы. "
-"Активировать теги аккаунта может Администратор, задав настройки в "
-"`конфигурационном файле <https://github.com/bwsw/cloudstack-ui/blob/master/"
-"config-guide.md>`_."
-
-#: ../../CSUI-SSHkeys.rst:82
+#: ../../CSUI-SSHkeys.rst:80
 msgid "SSH Key Action Box"
 msgstr "Список действий с ключом SSH"
 
-#: ../../CSUI-SSHkeys.rst:83
+#: ../../CSUI-SSHkeys.rst:81
 msgid ""
-"By clicking \"Actions\" |actions icon| you can expand the list of actions "
-"for those SSH keys that belong to your user only. The deleting action is "
+"By clicking \"Actions\" |actions icon| you can expand the list of actions for "
+"those SSH keys that belong to your user only. The deleting action is "
 "available here."
 msgstr ""
-"Список действий для ключей SSH открывается кликом на |actions icon| "
-"напротив нужного ключа в списке. Список действий доступен для тех ключей, "
-"которые принадлежат пользователю. В списке действий доступно действие "
-"удаления ключа SSH."
+"Список действий для ключей SSH открывается кликом на |actions icon| напротив "
+"нужного ключа в списке. Список действий доступен для тех ключей, которые "
+"принадлежат пользователю. В списке действий доступно действие удаления ключа "
+"SSH."
 
-#: ../../CSUI-SSHkeys.rst:87
+#: ../../CSUI-SSHkeys.rst:85
 msgid ""
 "Click \"Delete\" to delete a key and then confirm your action in the dialog "
 "box. The key will be deleted. Click \"Cancel\" to close the window without "
@@ -247,3 +239,14 @@ msgid ""
 msgstr ""
 "Для отмены удаления ключа нажмите \"Отменить\". Модальное окно закроется, "
 "ключ не будет удален из системы."
+
+#~ msgid ""
+#~ "The description is saved to account tags if they are supported for the "
+#~ "account. Account tags can be switched on in the `configuration file "
+#~ "<https://github.com/bwsw/cloudstack-ui/blob/master/config-guide.md>`_ by "
+#~ "an Administrator."
+#~ msgstr ""
+#~ "Описание ключа сохраняется в теги аккаунта, если они активированы. "
+#~ "Активировать теги аккаунта может Администратор, задав настройки в "
+#~ "`конфигурационном файле <https://github.com/bwsw/cloudstack-ui/blob/master/"
+#~ "config-guide.md>`_."
