rename access vm tabs

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -571,8 +571,8 @@
     "OPEN_SHELL_CONSOLE": "Open WebShell",
     "OPEN_URL": "Open URL",
     "VNC_CONSOLE": "VNC console",
-    "SHELL_CONSOLE": "WebShell",
-    "URL": "URL",
+    "SHELL_CONSOLE": "SSH",
+    "HTTP": "HTTP",
     "VM_PASSWORD": "Password",
     "UNKNOWN": "Unknown",
     "LOGIN": "Login",
