--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-Start.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-Start.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-10-24 17:18+0700\n"
-"PO-Revision-Date: 2018-10-26 09:19+0700\n"
+"PO-Revision-Date: 2018-10-30 12:48+0700\n"
 "Last-Translator: \n"
 "Language: ru\n"
 "Language-Team: \n"
@@ -139,7 +139,7 @@ msgid ""
 msgstr ""
 "При входе в систему, пользователь видит раздел *Виртуальные машины* в меню "
 "второго уровня. В меню первого уровня отображаются два основных раздела, в "
-"которых увидеть следующие вложенные эелементы меню:"
+"которых можно увидеть следующие вложенные элементы меню:"
 
 #: ../../CSUI-Start.rst:46
 msgid "*Virtual Machines*"
