--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1447,6 +1447,10 @@
       "DATE": "Дата",
       "LOG_FILE": "Файл",
       "TEXT": "Текст"
+    },
+    "FAB": {
+      "FOLLOW_LOG": "Отслеживать",
+      "STOP_FOLLOWING": "Не отслеживать"
     }
   },
   "SETTINGS": {
