--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1456,6 +1456,10 @@
       "DATE": "Date",
       "LOG_FILE": "Log file",
       "TEXT": "Text"
+    },
+    "FAB": {
+      "FOLLOW_LOG": "Follow log",
+      "STOP_FOLLOWING": "Stop following"
     }
   },
   "SETTINGS": {
