--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1435,7 +1435,7 @@
     "FILTERS": {
       "SELECT_ACCOUNTS": "Выберите аккаунты",
       "SELECT_VM": "Выберите ВМ",
-      "KEYWORDS": "Ключевые слова",
+      "SEARCH": "Поиск",
       "SHOW_LOGS": "Показать логи",
       "START_DATE": "Начальная дата",
       "END_DATE": "Конечная дата",
