feat(vm-logs): scroll

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1446,7 +1446,8 @@
     "LIST": {
       "DATE": "Дата",
       "LOG_FILE": "Файл",
-      "TEXT": "Текст"
+      "TEXT": "Текст",
+      "SHOW_MORE": "Показать еще"
     },
     "FAB": {
       "FOLLOW_LOG": "Отслеживать",
