add vm logs settings

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1494,6 +1494,11 @@
     "VM_PREFERENCES": {
       "TITLE": "VM preferences",
       "KEYBOARD_LAYOUT": "Keyboard layout"
+    },
+    "VM_LOGS": {
+      "TITLE": "LogView",
+      "SHOW_LAST_MESSAGES": "Show last (messages)",
+      "SHOW_LAST_MINUTES": "Show last (minutes)"
     }
   },
   "CLIPBOARD": {
